# sparkmagic

./: pyproject.toml
sparkmagic/sparkmagic/: __init__.py
sparkmagic/sparkmagic/kernels/: kernelmagics.py
