[tool.poetry]
name = "jupyterlab_sparkmagic"
version = "0.20.5.1"
description = ""
authors = ["Devin Stein <devstein@seas.upenn.edu>"]
readme = "README.md"

packages = [
    { include = "hdijupyterutils", from = "./hdijupyterutils" },
    { include = "autovizwidget", from = "./autovizwidget" },
    { include = "sparkmagic", from = "./sparkmagic" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
hdijupyterutils = {path = "./hdijupyterutils", develop = true }
autovizwidget = {path = "./autovizwidget", develop = true }
sparkmagic = {path = "./sparkmagic", develop = true }
numpy = "1.21.6"
pandas = "1.3.5"
pytest = "^7.2.0"
mock = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
